@@ -152,6 +152,7 @@ data(Zhou_kidney_pce)
 subsample <- Zhou_kidney_pce[1:1000, ]
 (o <- RNAseqdata(subsample, check = TRUE, transfo.method = "vst"))
 plot(o, range = 1e6)
+PCAdataplot(o)
 
 
 # (2) transformation with two methods on the whole data set
